ajustes de layout e componentes externos

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+              "node_modules/ngx-spinner/animations/ball-scale.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -105,7 +105,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-spinner/animations/ball-scale.css"
             ],
             "scripts": []
           }
